--- a/lesson1.ipynb
+++ b/lesson1.ipynb
@@ -59,17 +59,26 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KlIB4lf7zsWA"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# ✅ Python: Store and search student names using a list\n",
         "\n",
         "# Create a list of students\n",
-        "students = [\"Ali\", \"Sara\", \"Zaid\"]\n",
+        "students = [\"mohit\", \"vansh\" ,\"krish\"]\n",
         "\n",
         "# Add a new student\n",
-        "students.append(\"Hina\")\n",
+        "students.append(\"prit\")\n",
         "\n",
         "# Search for a student\n",
-        "search_name = \"Zaid\"\n",
+        "search_name = \"mohit\"\n",
         "if search_name in students:\n",
         "    print(f\"{search_name} found at index {students.index(search_name)}\")\n",
         "else:\n",
@@ -83,16 +92,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8gVzbb-MG0Su",
-        "outputId": "d1e2637e-e58e-4887-e984-c9fc6e54c458"
+        "outputId": "ff9271ed-3203-448b-a4b4-106e1bdd2356"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Zaid found at index 2\n",
-            "📋 Student List: ['Ali', 'Sara', 'Zaid', 'Hina']\n"
+            "mohit found at index 0\n",
+            "📋 Student List: ['mohit', 'vansh', 'krish', 'prit']\n"
           ]
         }
       ]
