--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -47,11 +47,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "wrONv57JyhIE"
+        "id": "wrONv57JyhIE",
+        "outputId": "9e4c0255-0bc6-4960-9913-08ccaca0d1d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Stack (Top to Bottom): [30, 20, 10]\n",
+            "Top Element: 30\n",
+            "Found 20 at position 1 from top\n",
+            "Popped: 30\n",
+            "Stack (Top to Bottom): [20, 10]\n",
+            "Popped: 20\n",
+            "Popped: 10\n",
+            "Stack is Empty\n",
+            "Stack (Top to Bottom): [10, 20, 22, 31, 52]\n",
+            "[52, 31, 22, 20, 10]\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# ✅ Python Implementation of Stack using List (Array)\n",
@@ -94,7 +115,19 @@
         "peek()\n",
         "search(20)\n",
         "pop()\n",
-        "traverse()"
+        "traverse()\n",
+        "pop()\n",
+        "pop()\n",
+        "traverse()\n",
+        "push(52)\n",
+        "push(31)\n",
+        "push(22)\n",
+        "push(20)\n",
+        "push(10)\n",
+        "traverse()\n",
+        "print(stack)\n",
+        "\n",
+        "\n"
       ]
     },
     {
